# genai-video-analyzer

./: GUI.md  Makefile  QUICKSTART.md  README.md  REQUIREMENTS.md  STATUS.md  config.example.toml  pyproject.toml  setup.py  setup_pytorch_rtx5080.sh  start_gui.bat  start_gui.sh  test_basic.py
genai_video_analyzer/: __init__.py  audio_transcriber.py  frame_captioner.py  gui.py  gui_launcher.py  gui_standalone.py  main.py  scene_detector.py  summary_generator.py  utils.py  video_analyzer.py
genai_video_analyzer/templates/: index.html
tests/: test_video_analyzer.py
